--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,8 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://kit.fontawesome.com/1d18d1cefe.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <script
+      src="https://kit.fontawesome.com/1d18d1cefe.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Indian Express</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
